--- a/blogapp/templates/home.html
+++ b/blogapp/templates/home.html
@@ -2,7 +2,8 @@
 {% block contents %}
 <body>
 <br>
-{% for blog in blogs.all %}
+{% for blog in posts %}
+
 <div class="container">
   <div class="card">
     <div class="card-body">
@@ -15,5 +16,22 @@
 </div>
 {%endfor%}
 
+<!--First Previous 3of4 Next Last-->
+<div class='container'>
+  <!--First Previous를 만들어주는 조건문-->
+  {%if posts.has_previous%}
+  <a href="?page=1">First</a>
+  <a href="?page={{posts.previous_page_number}}">Previous</a>
+  {%endif%}
+  <!-- 3of4 보고있는 페이지 넘버 출력-->
+  <span>{{posts.number}}</span>
+  <span>of</span>
+  <span>{{posts.paginator.num_pages}}</span>
+  <!-- next Last를 구별해주는 코드-->
+  {%if posts.has_next%}
+  <a href="?page={{posts.next_page_number}}">Next</a>
+  <a href="?page={{posts.paginator.num_pages}}>">Last</a>
+  {%endif%}
+</div>
 </body>
 {%endblock%}
