--- a/blogapp/templates/new.html
+++ b/blogapp/templates/new.html
@@ -1,22 +1,16 @@
 {% extends 'base.html' %}
 {% block contents %}
-<body>
 <br>
-<div class="container">
-    <form action="{% url 'create' %}">
-        <h4>제목: </h4>
-        <input type="text" name="title">
-        <br>
-        <br>
-        <h4>본문: </h4>
-        <textarea cols=40 rows=10 name="body"></textarea>
-        <br>
-        <br>
-        <input class="btn btn-dark" type="submit" value="글쓰기">
-    </form>
-    <br>
-    <a href="{% url 'home' %}">홈으로 돌아가기</a>
-
-</div>
+<body>
+    <div class="container">
+        <form method="POST">
+            {% csrf_token %}
+            <table>
+            {{form.as_table}}
+            </table>
+            <br>
+            <input class="btn btn-dark" type="submit" value="제출하기">
+        </form>
+    </div>
 </body>
 {%endblock%}
